# nyc-air-quality

./: README.md  pyproject.toml  run_me.py
airq_nyc/: __init__.py  aqi_calculations.py  cli_app.py  data_analysis.py  data_io.py  visualization_mpl.py
tests/: test_aqi_calculations.py  test_data_analysis.py  test_data_io.py  test_o3_units_and_logic.py
